Fixed Hero height on smaller screensizes.

--- a/src/sass/global/_hero.scss
+++ b/src/sass/global/_hero.scss
@@ -1,13 +1,23 @@
+@use "base" as *;
+
 .hero {
   width: 100%;
   height: 715px;
   background-color: #867d7d;
+
+  @media (width < $bp-small) {
+    height: 300px;
+  }
 
   &__carousel-img {
     & > img {
       height: 840px;
       object-fit: cover;
       object-position: center;
+
+      @media (width < $bp-small) {
+        height: 400px;
+      }
     }
   }
 }
